# rules_runfiles_group

./: README.md
.bcr/: metadata.template.json
.github/workflows/: publish.yml
example/producer/rules/: BUILD.bazel  asset_bundle.bzl  starlark_binary.bzl  starlark_library.bzl
example/src/: BUILD.bazel
example/src/assets/: README.md  messages.properties  theme.conf
runfiles_group/private/: lib.bzl
runfiles_group/private/providers/: runfiles_group_metadata_info.bzl
